# siiRL

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README-zh.md  README.md  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile.cu124
docs/: conf.py  guide.rst  index.rst  requirements-docs.txt
docs/ascend_tutorial/: ascend_profiling.rst  ascend_profiling_en.rst  ascend_quickstart.rst
docs/examples/: config.rst  cpgd_example.rst  deepscaler_example.rst  mm_eureka_example.rst
docs/preparation/: prepare_data.rst  reward_function.rst
docs/start/: install.rst  quickstart.rst
examples/cpgd_trainer/: run_qwen2_5-7b.sh  run_qwen2_5_vl-72b.sh  run_qwen2_5_vl-7b.sh  run_qwen3-1.7b.sh  run_qwen3-8b.sh
examples/custom_reward/: rewardfunc_gsm8k.py  run_qwen2_5-7b-custom_reward.sh
examples/data_preprocess/: deepscaler.py  geo3k.py  gsm8k.py  math_dataset.py  mm_eureka.py
examples/experimental/marft/: run_qwen2_5-3b_marft.sh
examples/experimental/multiturn_server/: run_qwen2_5-3b_grpo_multiturn_vllm.sh
examples/grpo_trainer/: run_qwen2_5-0.5b-single-gpu.sh  run_qwen2_5-32b-npu.sh  run_qwen2_5-7b-npu-discrete_prof.sh  run_qwen2_5-7b-npu-e2e_prof.sh  run_qwen2_5-7b-npu.sh  run_qwen2_5-7b.sh  run_qwen2_5_vl-72b.sh  run_qwen2_5_vl-7b-npu.sh  run_qwen2_5_vl-7b.sh  run_qwen3-1.7b.sh  run_qwen3-8b.sh
examples/multi_turn/config/: gsm8k_multiturn_grpo.yaml
examples/multi_turn/gsm8k/: run_qwen2_5-3b_grpo_multiturn_sglang.sh
examples/ppo_trainer/: run_qwen2_5-72b.sh  run_qwen2_5-7b.sh  run_qwen3-1.7b.sh  run_qwen3-8b.sh
siirl/: __init__.py
siirl/client/: main_dag.py
siirl/client/config/: environment.json  ppo_dag_trainer.yaml  workflow_grpo.yaml  workflow_ppo.yaml
siirl/dataloader/: __init__.py  data_loader_node.py  partitioned_dataset.py  vision_utils.py
siirl/models/: loader.py  patcher.py  registry.py  weight_loader_registry.py
siirl/models/mcore/: gpt_model.py  loader.py  model_forward.py  model_initializer.py  saver.py
siirl/models/model_utils/: visual.py
siirl/models/transformers/: internvl.py  kimi_vl.py  llama.py  monkey_patch.py  npu_patch.py  qwen2.py  qwen2_5_vl.py  qwen2_vl.py
siirl/multiturn/agent_loop/: agent_loop.py  single_turn_agent_loop.py  tool_agent_loop.py
siirl/multiturn/interactions/: gsm8k_interaction.py
siirl/multiturn/tools/: geo3k_tool.py  gsm8k_tool.py  mcp_base_tool.py  mcp_search_tool.py  sandbox_fusion_tools.py  search_tool.py
siirl/scheduler/: __init__.py  enums.py  graph_updater.py  launch.py  process_group_manager.py  ray_actor_manager.py  resource_manager.py  reward.py  task_scheduler.py
siirl/utils/checkpoint/: checkpoint_manager.py  fsdp_checkpoint_manager.py  megatron_checkpoint_manager.py
siirl/utils/debug/: __init__.py  mstx_profile.py  nvtx_profile.py  performance.py  profile.py
siirl/utils/extras/: device.py  fs.py  hdfs_io.py  import_utils.py  misc.py  packages.py  patch.py
siirl/utils/logger/: aggregate_logger.py  logging_utils.py  tracking.py
siirl/utils/megatron/: megatron_utils.py  memory.py  memory_buffer.py  pipeline_parallel.py
siirl/utils/metrics/: metric_utils.py
siirl/utils/model_utils/: __init__.py  activation_offload.py  flops_counter.py  fsdp_utils.py  model.py  seqlen_balancing.py  torch_functional.py  ulysses.py  vllm_utils.py
siirl/utils/params/: __init__.py  dag_args.py  data_args.py  display_dict.py  model_args.py  parser.py  profiler_args.py  training_args.py
siirl/utils/reward_score/: __init__.py  geo3k.py  math_batch.py  mm_eureka.py
siirl/version/: version
siirl/workers/: fsdp_workers.py  megatron_workers.py
siirl/workers/actor/: base.py  dp_actor.py  megatron_actor.py
siirl/workers/base_worker/: __init__.py  resouce_pool.py
siirl/workers/critic/: base.py  dp_critic.py  megatron_critic.py
tests/: __init__.py
tests/dag/: test_config_loader.py  test_node.py  test_task_graph.py  test_task_loader.py
tests/dag_worker/: test_dag_worker.py
tests/data_buffer/: test_data_buffer.py
tests/scheduler/: test_process_group_manager.py  test_task_scheduler.py
(+91 files in other folders)
